# GVSE

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: gvse_core.h  version.h.in
lib/: gvse_core.cpp  gvse_data_manager.cpp  gvse_window.cpp  gvse_window_manager.cpp
lib/include/: gvse_data_manager.h  gvse_window.h  gvse_window_manager.h  welcome.h  win_info.h
lib/windows/: welcome.cpp
src/: main.cpp
tests/: CMakeLists.txt
uml/: gvse_modules.pml  objects.pml
